<resources>
    <string name="app_name">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_member">AddMember</string>
    <string name="tv_AccountNumber">Acocount Number:</string>
    <string name="tv_PWD">Password:</string>
    <string name="BT_login">Login</string>
    <string name="BT_refresh">Refresh</string>
    <string name="BT_signUp">Sign up</string>
    <string name="tv_signUp_accountNumber">Account Number:</string>
    <string name="tv_signUp_name">Name:</string>
    <string name="tv_signUp_PWD">Password:</string>
    <string name="tv_signUp_checkPWD">Enter your password again:</string>
    <string name="tv_signUp_email">E-mail:</string>
    <string name="BT_signUp_done">Done</string>
    <string name="BT_signUp_cancel">Cancel</string>
    <string name="BT_signUp_check">Checkacount</string>
    <string name="title_activity_select_account_type">SelectAccountType</string>
    <string name="BT_commonUser">Common User</string>
    <string name="BT_seminarOrganizers">Seminar Organizers</string>
    <string name="title_activity_seminar_organizers">SeminarOrganizers</string>
    <string name="tv_signUp_phone">Phone</string>
    <string name="tv_organizersignUp_name">Organization Name:</string>
    <string name="tv_signUp_principal">Principal:</string>
    <string name="title_activity_meetinglist">meetinglist</string>
    <string name="new_meeting">Added new meeting</string>
    <string name="title_activity_main_interface">MainInterface</string>
</resources>
