<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CommonUser"
    tools:showIn="@layout/activity_common_user">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_signUp_accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_accountNumber"
                android:textSize="25sp"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="30sp"
                android:textColor="#9955FF"/>

            <EditText
                android:id="@+id/ET_signUp_accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_signUp_accountNumber"
                android:layout_alignLeft="@+id/tv_signUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/tv_signUp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_name"
                android:textSize="25sp"
                android:layout_below="@+id/ET_signUp_accountNumber"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"
                android:textColor="#9955FF"/>

            <EditText
                android:id="@+id/ET_signUp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_signUp_name"
                android:layout_alignLeft="@+id/tv_signUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"/>

            <TextView
                android:id="@+id/tv_signUp_PWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_PWD"
                android:textSize="25sp"
                android:layout_below="@+id/ET_signUp_name"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"
                android:textColor="#9955FF"/>

            <EditText
                android:id="@+id/ET_signUp_PWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_signUp_PWD"
                android:layout_alignLeft="@+id/tv_signUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tv_signUp_checkPWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_checkPWD"
                android:textSize="20sp"
                android:layout_below="@+id/ET_signUp_PWD"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"
                android:textColor="#9955FF"/>

            <EditText
                android:id="@+id/ET_signUp_checkPWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_signUp_checkPWD"
                android:layout_alignLeft="@+id/tv_signUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tv_signUp_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_email"
                android:textSize="20sp"
                android:layout_below="@+id/ET_signUp_checkPWD"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"
                android:textColor="#9955FF"/>

            <EditText
                android:id="@+id/ET_signUp_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_signUp_email"
                android:layout_alignLeft="@+id/tv_signUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"/>

            <TextView
                android:id="@+id/tv_signUp_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_phone"
                android:textSize="20sp"
                android:layout_below="@+id/ET_signUp_email"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"
                android:textColor="#9955FF"/>

            <EditText
                android:id="@+id/ET_signUp_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_signUp_phone"
                android:layout_alignLeft="@+id/tv_signUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="phone"/>

            <Button
                android:id="@+id/BT_signUp_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BT_signUp_done"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_below="@+id/ET_signUp_phone"
                android:layout_marginLeft="30sp"
                android:background="#9955FF"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/BT_signUp_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BT_signUp_cancel"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_below="@+id/ET_signUp_phone"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30sp"
                android:background="#9955FF"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/BT_signUp_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BT_signUp_check"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:background="#9955FF"
                android:textColor="#FFFFFF"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
