<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rabbit.login.SeminarOrganizers"
    tools:showIn="@layout/activity_seminar_organizers">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_organizersignUp_accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_accountNumber"
                android:textSize="25sp"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="30sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_accountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"/>

            <TextView
                android:id="@+id/tv_organizersignUp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_organizersignUp_name"
                android:textSize="25sp"
                android:layout_below="@+id/ET_organizersignUp_accountNumber"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_name"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"/>

            <TextView
                android:id="@+id/tv_organizersignUp_PWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_PWD"
                android:textSize="25sp"
                android:layout_below="@+id/ET_organizersignUp_name"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_PWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_PWD"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tv_organizersignUp_checkPWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_checkPWD"
                android:textSize="20sp"
                android:layout_below="@+id/ET_organizersignUp_PWD"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_checkPWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_checkPWD"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tv_organizersignUp_principal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_principal"
                android:textSize="20sp"
                android:layout_below="@+id/ET_organizersignUp_checkPWD"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_principal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_principal"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/tv_organizersignUp_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_email"
                android:textSize="20sp"
                android:layout_below="@+id/ET_organizersignUp_principal"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_email"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"/>

            <TextView
                android:id="@+id/tv_organizersignUp_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_phone"
                android:textSize="20sp"
                android:layout_below="@+id/ET_organizersignUp_email"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="20sp"/>

            <EditText
                android:id="@+id/ET_organizersignUp_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_below="@+id/tv_organizersignUp_phone"
                android:layout_alignLeft="@+id/tv_organizersignUp_accountNumber"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25sp"/>

            <Button
                android:id="@+id/BT_organizersignUp_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BT_signUp_done"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_below="@+id/ET_organizersignUp_phone"
                android:layout_marginLeft="30sp"/>

            <Button
                android:id="@+id/BT_organizersignUp_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BT_signUp_cancel"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_below="@+id/ET_organizersignUp_phone"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30sp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
